certificates.yaml
---
# Namespace 생성
apiVersion: v1
kind: Namespace
metadata:
  name: ai-serving
